--- a/templates/followed_articles.html
+++ b/templates/followed_articles.html
@@ -9,8 +9,8 @@
         <div class="bg-white p-4 rounded-md shadow article-card" id="article-{{ article.id }}">
           <!-- Link do profilu użytkownika -->
           <a href="{% url 'user_profile_view' article.user.id %}" class="flex items-center gap-2 mb-4">
-            {% if article.user.userprofile.avatar %}
-              <img src="{{ article.user.userprofile.avatar.url }}" class="rounded-full w-12 h-12" alt="Avatar użytkownika">
+            {% if article.user.profile.avatar %}
+              <img src="{{ article.user.profile.avatar.url }}" class="rounded-full w-12 h-12" alt="Avatar użytkownika">
             {% else %}
               <img src="{% static 'img/profil.jpg' %}" class="rounded-full w-12 h-12" alt="Domyślny avatar">
             {% endif %}
