--- a/templates/article.html
+++ b/templates/article.html
@@ -145,6 +145,7 @@
                         {% if article.liked_by_user %}Lubisz to{% else %}Polub to{% endif %}
                         </span>
                     </button>
+                    <!-- Przycisk do udostępniania w mediach społecznościowych -->
                     <div class="relative" id="share-dropdown-container-{{ article.id }}">
                         <button type="button"
                             onclick="toggleShareDropdown({{ article.id }})"
@@ -157,6 +158,7 @@
                             </svg>
                             <span>Podziel się</span>
                         </button>
+                        <!-- Opcje serwisów do udostępniania - https://github.com/fcurella/django-social-share?tab=readme-ov-file -->
                         <div class="hidden absolute right-0 mt-2 w-48 bg-white border border-gray-200 rounded shadow-lg z-10"
                              id="share-dropdown-{{ article.id }}">
                             <ul class="py-1 text-sm text-gray-700">
@@ -171,6 +173,7 @@
                                 </li>
                             </ul>
                         </div>
+                        <!-- Skrypt obsługujący rozwijaną listę serwisów do dzielenia się treścią -->
                         <script>
                         function toggleShareDropdown(id) {
                             const dropdown = document.getElementById(`share-dropdown-${id}`);
